res/examples/valid/assert_type_from_inferred_type_c.eg
let a: number = 100;

let foo = (): number => { a };
let bar: function<tuple, number> = foo;