res/examples/invalid/fn_expr_type_mismatch_in_body_closure_identifier.eg
let a: string = "foo";

(): number => { a };

// out: TypeError: mismatched types: expected type `number` but received `string`